@@ -470,6 +470,7 @@
       "embed_footer": "was created by",
       "memory": "Memory",
       "version": "Version",
+      "support": "Support Server",
       "extended": "Shards Info"
     },
     "roleta": {
