@@ -481,6 +481,7 @@
       "embed_footer": "foi criada por",
       "memory": "Memória",
       "version": "Versão",
+      "support": "Servidor de Suporte",
       "extended": "Informações dos Shards"
     },
     "roleta": {
